I removed the View Highscores function; removed unneeded variables; created an empty myInterval variable in order to stop the timer when the user has answered all questions correctly; added comments on javascript; made sure to store scores to the local storage and get old scores if they are available from local storage; removed the back function as I had set an onclick attribute for the Go Back button to refresh the page completely; completed README.md file for the project.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,11 +38,14 @@ p {
 }
 
 #quiz-cards {
-    border: 1px solid black;
     margin: 10% 20%;
     height: 300px;
     width: 60%;
     text-align: center;
+}
+
+#quiz-cards1 {
+    display: none;
 }
 
 #quiz-cards p {
